Fix spotbugs note